--- a/src/grid/grid.css
+++ b/src/grid/grid.css
@@ -19,6 +19,18 @@
     margin-right: 32px;
 }
 
+.tips-btn {
+    margin-left: 32px;
+}
+
+.pointers {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 80px;
+}
+
 .grid-container {
     display: flex;
     flex-wrap: wrap;
@@ -43,6 +55,47 @@
 .finish {
     background-image: url('./flag-solid.svg');
     background-repeat: no-repeat;
+}
+
+.tips {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  max-width: 100%;
+  height: 300px;
+  max-height: 100%;
+  z-index: 100;
+  background: white;
+  box-shadow: 0 0 8px 2px rgba(121, 121, 121, 0.9);
+}
+
+.tips-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 20px 50px 20px 20px;
+  overflow: auto;
+}
+
+.close-btn {
+    position: absolute;
+    z-index: 1;
+    top: 10px;
+    right: 20px;
+    border: 0;
+    color: black;
+    background-color: white;
+    padding: 5px 10px;
+    font-size: 1.2rem;
+}
+
+.closed {
+  display: none;
 }
 
 .wall {
