--- a/src/sort/bars.css
+++ b/src/sort/bars.css
@@ -2,8 +2,20 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    margin: 20px 0;
 }
 
 .bars-controll {
+    display: flex;
+    align-items: center;
+    vertical-align: auto;
+}
+
+#slider:hover {
+    cursor: pointer;
+}
+
+.slider-container {
     display: flex;
 }
